--- a/TODO.txt
+++ b/TODO.txt
@@ -2,3 +2,4 @@
 2. ConditionalProbBoard generated from the corners (not from the middle)
 3. Board generated so that every letter is at least in 2 words
 4. Game variant without diacritics (all letters on board will be without diacritics, but each letter would also match all its variants with diacritics)
+5. In tree_builder, prevent the same word from being added repeatedly. The tree isn't affected by duplicate words, however the letter frequencies and digraph statistics are 
